Set layout breakpoint according to spec (fixes #902)

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -360,7 +360,7 @@ $layout-drawer-wide: 456px;
 $layout-drawer-width: $layout-drawer-narrow;
 
 $layout-header-icon-size: 32px;
-$layout-screen-size-threshold: 850px;
+$layout-screen-size-threshold: 1024px;
 $layout-header-icon-margin: 24px;
 $layout-drawer-button-mobile-size: 32px;
 $layout-drawer-button-desktop-size: 48px;
